--- a/Netflix_Analysis.ipynb
+++ b/Netflix_Analysis.ipynb
@@ -8,11 +8,12 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
-    "# Load Netflix dataset\n",
-    "df = pd.read_csv('netflix_titles.csv')\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('Netflix-Data-Analysis.csv')\n",
     "\n",
-    "# Display first five rows\n",
+    "# Display the first five rows\n",
     "df.head()"
    ]
   }
