--- a/Netflix_Analysis.ipynb
+++ b/Netflix_Analysis.ipynb
@@ -1,35 +1,34 @@
-import pandas as pd
-import matplotlib.pyplot as plt
-import seaborn as sns
-from collections import Counter
-
-# Load the dataset
-df = pd.read_csv('Netflix-Data-Analysis.csv')
-
-# Display the first five rows
-df.head()
-
-# Check for missing values
-print(df.isnull().sum())
-
-# Count Movies and TV Shows
-sns.countplot(x=df["type"], palette="viridis")
-plt.title("Number of Movies vs. TV Shows on Netflix")
-plt.show()
-
-# Plot Netflix content added per year
-df['release_year'].value_counts().sort_index().plot(kind='line', figsize=(10,5), color='red')
-plt.title("Netflix Content Added Per Year")
-plt.xlabel("Year")
-plt.ylabel("Number of Titles")
-plt.grid(True)
-plt.show()
-
-# Split genres and count
-all_genres = df['listed_in'].dropna().str.split(', ').sum()
-genre_counts = Counter(all_genres)
-
-# Plot the top 10 genres
-pd.DataFrame(genre_counts.most_common(10), columns=['Genre', 'Count']).set_index('Genre').plot(kind='bar', figsize=(10,5), color='blue')
-plt.title("Top 10 Most Common Netflix Genres")
-plt.show()
+{
+  "imports": [
+    "pandas as pd",
+    "matplotlib.pyplot as plt",
+    "seaborn as sns",
+    "from collections import Counter"
+  ],
+  "load_dataset": {
+    "filename": "Netflix-Data-Analysis.csv",
+    "dataframe_name": "df"
+  },
+  "display_head": "df.head()",
+  "check_missing_values": "df.isnull().sum()",
+  "count_movies_tv_shows": {
+    "plot": "sns.countplot(x=df[\"type\"], palette=\"viridis\")",
+    "title": "Number of Movies vs. TV Shows on Netflix",
+    "show": "plt.show()"
+  },
+  "content_per_year": {
+    "plot": "df['release_year'].value_counts().sort_index().plot(kind='line', figsize=(10,5), color='red')",
+    "title": "Netflix Content Added Per Year",
+    "xlabel": "Year",
+    "ylabel": "Number of Titles",
+    "grid": "True",
+    "show": "plt.show()"
+  },
+  "top_genres": {
+    "split_genres": "df['listed_in'].dropna().str.split(', ').sum()",
+    "count_genres": "Counter(all_genres)",
+    "plot": "pd.DataFrame(genre_counts.most_common(10), columns=['Genre', 'Count']).set_index('Genre').plot(kind='bar', figsize=(10,5), color='blue')",
+    "title": "Top 10 Most Common Netflix Genres",
+    "show": "plt.show()"
+  }
+}
