--- a/Netflix_Analysis.ipynb
+++ b/Netflix_Analysis.ipynb
@@ -1,34 +1,79 @@
 {
-  "imports": [
-    "pandas as pd",
-    "matplotlib.pyplot as plt",
-    "seaborn as sns",
-    "from collections import Counter"
-  ],
-  "load_dataset": {
-    "filename": "Netflix-Data-Analysis.csv",
-    "dataframe_name": "df"
+  "nbformat": 4,
+  "nbformat_minor": 4,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.8"
+    }
   },
-  "display_head": "df.head()",
-  "check_missing_values": "df.isnull().sum()",
-  "count_movies_tv_shows": {
-    "plot": "sns.countplot(x=df[\"type\"], palette=\"viridis\")",
-    "title": "Number of Movies vs. TV Shows on Netflix",
-    "show": "plt.show()"
-  },
-  "content_per_year": {
-    "plot": "df['release_year'].value_counts().sort_index().plot(kind='line', figsize=(10,5), color='red')",
-    "title": "Netflix Content Added Per Year",
-    "xlabel": "Year",
-    "ylabel": "Number of Titles",
-    "grid": "True",
-    "show": "plt.show()"
-  },
-  "top_genres": {
-    "split_genres": "df['listed_in'].dropna().str.split(', ').sum()",
-    "count_genres": "Counter(all_genres)",
-    "plot": "pd.DataFrame(genre_counts.most_common(10), columns=['Genre', 'Count']).set_index('Genre').plot(kind='bar', figsize=(10,5), color='blue')",
-    "title": "Top 10 Most Common Netflix Genres",
-    "show": "plt.show()"
-  }
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from collections import Counter\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Load the dataset\n",
+        "df = pd.read_csv('Netflix-Data-Analysis.csv')\n",
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Check for missing values\n",
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Count Movies and TV Shows\n",
+        "sns.countplot(x=df[\"type\"], palette=\"viridis\")\n",
+        "plt.title(\"Number of Movies vs. TV Shows on Netflix\")\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Plot Netflix content added per year\n",
+        "df['release_year'].value_counts().sort_index().plot(kind='line', figsize=(10,5), color='red')\n",
+        "plt.title(\"Netflix Content Added Per Year\")\n",
+        "plt.xlabel(\"Year\")\n",
+        "plt.ylabel(\"Number of Titles\")\n",
+        "plt.grid(True)\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Split genres and count\n",
+        "all_genres = df['listed_in'].dropna().str.split(', ').sum()\n",
+        "genre_counts = Counter(all_genres)\n",
+        "pd.DataFrame(genre_counts.most_common(10), columns=['Genre', 'Count']).set_index('Genre').plot(kind='bar', figsize=(10,5), color='blue')\n",
+        "plt.title(\"Top 10 Most Common Netflix Genres\")\n",
+        "plt.show()"
+      ]
+    }
+  ]
 }
