--- a/Netflix_Analysis.ipynb
+++ b/Netflix_Analysis.ipynb
@@ -1,91 +1,164 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 4,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.8.8"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "from wordcloud import WordCloud\n",
+    "from sklearn.cluster import KMeans\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the dataset\n",
+    "content_df = pd.read_csv('Netflix-Data-Analysis.csv')\n"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "source": [
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "from collections import Counter\n"
-      ],
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "source": [
-        "# Load the dataset\n",
-        "df = pd.read_csv('Netflix-Data-Analysis.csv')\n",
-        "df.head()"
-      ],
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "source": [
-        "# Check for missing values\n",
-        "df.isnull().sum()"
-      ],
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "source": [
-        "# Count Movies and TV Shows\n",
-        "sns.countplot(x=df[\"type\"], palette=\"viridis\")\n",
-        "plt.title(\"Number of Movies vs. TV Shows on Netflix\")\n",
-        "plt.show()"
-      ],
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "source": [
-        "# Plot Netflix content added per year\n",
-        "df['release_year'].value_counts().sort_index().plot(kind='line', figsize=(10,5), color='red')\n",
-        "plt.title(\"Netflix Content Added Per Year\")\n",
-        "plt.xlabel(\"Year\")\n",
-        "plt.ylabel(\"Number of Titles\")\n",
-        "plt.grid(True)\n",
-        "plt.show()"
-      ],
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "source": [
-        "# Split genres and count\n",
-        "all_genres = df['listed_in'].dropna().str.split(', ').sum()\n",
-        "genre_counts = Counter(all_genres)\n",
-        "pd.DataFrame(genre_counts.most_common(10), columns=['Genre', 'Count']).set_index('Genre').plot(kind='bar', figsize=(10,5), color='blue')\n",
-        "plt.title(\"Top 10 Most Common Netflix Genres\")\n",
-        "plt.show()"
-      ],
-      "outputs": []
-    }
-  ]
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 1. Data Overview & Missing Values"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_values = content_df.isnull().sum()\n",
+    "sns.barplot(x=missing_values.index, y=missing_values.values)\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.title('Missing Values in Each Column')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 2. Content Distribution"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(x='type', data=content_df)\n",
+    "plt.title('Distribution of Content Types')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 3. Top Directors"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_directors = content_df['director'].value_counts().head(10)\n",
+    "sns.barplot(y=top_directors.index, x=top_directors.values)\n",
+    "plt.title('Top 10 Directors by Number of Titles')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 4. Cast Analysis"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cast_members = content_df['cast'].dropna().str.split(', ').explode()\n",
+    "top_cast = cast_members.value_counts().head(10)\n",
+    "sns.barplot(y=top_cast.index, x=top_cast.values)\n",
+    "plt.title('Top 10 Actors/Actresses')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 5. Content by Country"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_countries = content_df['country'].value_counts().head(10)\n",
+    "sns.barplot(y=top_countries.index, x=top_countries.values)\n",
+    "plt.title('Top 10 Countries by Number of Titles')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 6. Release Year Distribution"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(content_df['release_year'], bins=20, kde=True)\n",
+    "plt.title('Release Year Distribution')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": ["## 7. Word Cloud of Titles"]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordcloud = WordCloud(width=800, height=400, background_color='white').generate(' '.join(content_df['title']))\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "plt.axis('off')\n",
+    "plt.title('Word Cloud of Titles')\n",
+    "plt.show()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
